adding images from files

--- a/group-assignment.ipynb
+++ b/group-assignment.ipynb
@@ -21,6 +21,9 @@
     "    <img src=\"problem.png\" width=\"500\" height=\"300\" />\n",
     "</div>\n",
     "\n",
+    "![Optional Alt Text](problem.png)\n",
+    "\n",
+    "\n",
     "This problem represents a pathfinding challenge where the objective is to navigate through a network of interconnected cities, each linked by paths that have associated costs representing distances.\n",
     "\n",
     "### Straight line distance between all cities and the objective\n",
@@ -28,6 +31,8 @@
     "<div style=\"text-align: center\">\n",
     "    <img src=\"problem_ii.png\" width=\"500\" height=\"300\" />\n",
     "</div>\n",
+    "\n",
+    "![Optional Alt Text](problem_ii.png)\n",
     "\n",
     "**Problem Definition:**\n",
     "\n",
