--- a/GraphTheoryExploration.ipynb
+++ b/GraphTheoryExploration.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Advanced Search Algorithms | Group Assignment\n",
     "<i>Data Structures & Algorithms | Concepción Díaz Cantarero<br>\n",
-    "Master in Computer Science & Business Technology | 15th December, 2023</i><br><br>\n",
-    "Group 4 | Antoine Thuillier, Sara de la Espriella, Diego Gerlach, Percy Escribens, Juan Carlos Velazquez de Leon, Aida Gomezbueno"
+    "Master in Computer Science & Business Technology | 19th December, 2023</i><br><br>\n",
+    "\n",
+    "Aida Gomezbueno Berezo | aida.gomezbueno@student.ie.edu"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -573,7 +573,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
